Anleitung zu Tausch

--- a/www/de/index.html
+++ b/www/de/index.html
@@ -28,10 +28,24 @@
 			</div>
 		</div>
 
+
 		<div class="content">
-			<h1>Freiburg?</h1>
-			<p>Leider haben wir auf unserer Postkarte die Internetseite falsch angegeben. Bitte hier entlang:</p>
-			<div style="text-align:center;display:block;"><a href="https://bezahlkarte-stoppen.org">https://bezahlkarte-stoppen.org</a></div>
+			<h1>Anleitung zum Gutscheintausch</h1>
+			<p>Du bekommst die Bezahlkarte und nur 50€ Bargeld im Monat? Wenn du mehr Bargeld brauchst, dann lass und tauschen!</p>
+
+			<img id="cash_card" style="height:8em;" src="../static/img/cash_card.svg" />
+
+			<ol>
+				<li><strong>Kaufe einen Gutschein</strong> in den Geschäften <span translate="no">Aldi</span>, <span translate="no">Lidl</span>, <span translate="no">Edeka</span>, <span translate="no">Kaufland</span>, <span translate="no">Penny</span>, <span translate="no">Rewe</span> oder <span translate="no">DM</span> für <strong>50€</strong></li>
+				<li><strong>Bringe den Gutschein zu einer Tauschstelle!</strong><br>Hier bekommst du für die Gutscheine Bargeld.</li>
+			</ol>
+
+			<h2>Wo?</h2>
+			<p translate="no">Bürgerbüro Die Linke<br>Theodor-Körner-Str. 7<br>69115 Heidelberg</p>
+
+			<p>Mit öffentlichen Verkehrsmitteln am besten zu erreichen von den Haltestellen <span translate="no">Betriebshof</span> und <span translate="no">Hauptbahnhof</span></p>
+			<h2>Wann?</h2>
+			<p>Jeden 2. Dienstag und jeden 3. Freitag im Monat.</p>
 		</div>
 
 		<div class="content">
