--- a/www/en/index.html
+++ b/www/en/index.html
@@ -28,11 +28,25 @@
 			</div>
 		</div>
 
+
 		<div class="content">
-			<h1>Freiburg?</h1>
-			<p>Unfortunately, we have given the wrong website on our postcard. Please click here:</p>
-			<div style="text-align:center;display:block;"><a href="https://bezahlkarte-stoppen.org">https://bezahlkarte-stoppen.org</a></div>
-		</h1></div>
+			<h1>Instructions for exchanging vouchers</h1>
+			<p>You get the payment card and only €50 in cash per month? If you need more cash, then let and exchange!</p>
+
+			<img id="cash_card" style="height:8em;" src="../static/img/cash_card.svg" />
+
+			<ol>
+				<li><strong>Buy a voucher</strong> in the stores <span translate="no">Aldi</span>, <span translate="no">Lidl</span>, <span translate="no">Edeka</span>, <span translate="no">Kaufland</span>, <span translate="no">Penny</span>, <span translate="no">Rewe</span> or <span translate="no">DM</span> for <strong>50€</strong></li>
+				<li><strong>Take the voucher to an exchange point!</strong><br>Here you will receive cash for the vouchers.</li>
+			</ol>
+
+			<h2>Where?</h2>
+			<p translate="no">Bürgerbüro Die Linke<br />Theodor-Körner-Str. 7<br />69115 Heidelberg</p>
+
+			<p>Best reached by public transport from the stops <span translate="no">Betriebshof</span> and <span translate="no">Hauptbahnhof</span></p>
+			<h2>When?</h2>
+			<p>Every 2nd Tuesday and every 3rd Friday of the month.</p>
+		</div>
 
 		<div class="content">
 			<h1>Stop the payment card!</h1>
@@ -65,7 +79,7 @@
 
 			<img id="cash_card" style="height:8em;" src="../static/img/cash_card.svg" />
 
-			<p>The exchange campaigns are not unlawful but a response to an allegedly unconstitutional policy, as the basic rights of those affected are being violated and the cash ceiling of €50 jeopardizes the humane minimum subsistence level. (Read more at: <a href="https://www.proasyl.de/pressemitteilung/etappensieg-im-eilverfahren-gegen-restriktive-bezahlkarte-pro-asyl-und-gff-unterstuetzen-klagende-familie/">Stage victory in summary proceedings against restrictive payment card: PRO ASYL and GFF support complaining family</a> | PRO ASYL)</p>
+			<p>The exchange campaigns are not unlawful but a response to an allegedly unconstitutional policy, as the basic rights of those affected are being violated and the cash ceiling of €50 jeopardizes the humane subsistence level. (Read more at: <a href="https://www.proasyl.de/pressemitteilung/etappensieg-im-eilverfahren-gegen-restriktive-bezahlkarte-pro-asyl-und-gff-unterstuetzen-klagende-familie/">Stage victory in summary proceedings against restrictive payment card: PRO ASYL and GFF support complaining family</a> | PRO ASYL)</p>
 
 			<h2>How can you provide support?</h2>
 
