--- a/www/es/index.html
+++ b/www/es/index.html
@@ -28,11 +28,25 @@
 			</div>
 		</div>
 
+
 		<div class="content">
-			<h1>¿Friburgo?</h1>
-			<p>Lamentablemente, nos hemos equivocado de sitio web en nuestra postal. Haga clic aquí:</p>
-			<div style="text-align:center;display:block;"><a href="https://bezahlkarte-stoppen.org">https://bezahlkarte-stoppen.org</a></div>
-		</h1></div>
+			<h1>Instrucciones para canjear vales</h1>
+			<p>¿Te dan la tarjeta de pago y sólo 50 euros en efectivo al mes? Si necesitas más dinero, ¡hagamos un intercambio!</p>
+
+			<img id="cash_card" style="height:8em;" src="../static/img/cash_card.svg" />
+
+			<ol>
+				<li><strong>Compre un vale</strong> en las tiendas <span translate="no">Aldi</span>, <span translate="no">Lidl</span>, <span translate="no">Edeka</span>, <span translate="no">Kaufland</span>, <span translate="no">Penny</span>, <span translate="no">Rewe</span> o <span translate="no">DM</span> por <strong>50 euros</strong></li>
+				<li><strong>Lleve el vale a un centro de canje.</strong><br>Allí recibirá dinero en efectivo por los vales.</li>
+			</ol>
+
+			<h2>¿Dónde?</h2>
+			<p translate="no">Bürgerbüro Die Linke<br />Theodor-Körner-Str. 7<br />69115 Heidelberg</p>
+
+			<p>Se llega mejor en transporte público desde las paradas de autobús <span translate="no">Betriebshof</span> y <span translate="no">Hauptbahnhof</span></p>
+			<h2>¿Cuándo?</h2>
+			<p>Todos los segundos martes y terceros viernes de cada mes.</p>
+		</div>
 
 		<div class="content">
 			<h1>¡Para la tarjeta de pago!</h1>
