--- a/www/fa/index.html
+++ b/www/fa/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="fa">
 	<head>
-		<title>توقف کارت اعتباری</title>
+		<title>Bezahl&shy;karte stoppen</title>
 		<meta charset="utf-8"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-		<meta name="author" content="توقف کارت اعتباری"/>
+		<meta name="author" content="Bezahlkarte Stoppen"/>
 		<meta name="robots" content="index,follow"/>
 		<meta name="description" content=""/>
 		<link href="../static/style/fonts.css" rel="stylesheet"/>
@@ -28,99 +28,121 @@
 			</div>
 		</div>
 
+
 		<div class="content">
-			<h1>Freiburg?</h1>
-			<p>متأسفانه ما در کارت پستال خود آدرس اینترنتی را اشتباه وارد کردیم. لطفا اینجا کلیک کنید:</p>
-			<div style="text-align:center;display:block;"><a href="https://bezahlkarte-stoppen.org">https://bezahlkarte-stoppen.org</a></div>
+			<h1>راهنمای تبادل کوپن</h1>
+			<p>آیا کارت پرداخت و فقط ۵۰ یورو پول نقد در ماه دریافت می‌کنی؟ اگر به پول نقد بیشتری نیاز داری، بیایید تبادل کنیم!</p>
+
+			<img id="cash_card" style="height:8em;" src="../static/img/cash_card.svg" />
+
+			<ol>
+				<li><strong>یک کوپن خریداری کن</strong> در فروشگاه‌های <span translate="no">Aldi</span>, <span translate="no">Lidl</span>, <span translate="no">Edeka</span>, <span translate="no">Kaufland</span>, <span translate="no">Penny</span>, <span translate="no">Rewe</span> یا <span translate="no">DM</span> به مبلغ <strong>۵۰ یورو</strong></li>
+				<li><strong>کوپن را به یک مرکز تبادل ببر!</strong><br>اینجا در ازای کوپن‌ها پول نقد دریافت می‌کنی.</li>
+			</ol>
+
+			<h2>کجا؟</h2>
+			<p translate="no">Bürgerbüro Die Linke<br>Theodor-Körner-Str. 7<br>69115 Heidelberg</p>
+
+			<p>بهترین دسترسی با وسایل حمل و نقل عمومی از ایستگاه‌های <span translate="no">Betriebshof</span> و <span translate="no">Hauptbahnhof</span></p>
+			<h2>چه زمانی؟</h2>
+			<p>هر دومین سه‌شنبه و هر سومین جمعه در ماه.</p>
 		</div>
 
 		<div class="content">
-			<h1>توقف کارت اعتباری!</h1>
+			<h1>کارت پرداخت را متوقف کن!</h1>
 
 			<img id="logo" src="../static/img/bzklogo.svg" />
 			
-			<p>در هایدلبرگ و منطقه راین-نکار قرار است به زودی کارت اعتباری تبعیض‌آمیز برای پناهجویانی که کمک‌های قانون تأمین نیازمندی‌های پناهجویان را دریافت می‌کنند، معرفی شود. این تصمیم پشت کارت اعتباری، سیاست نژادپرستانه‌ای است که تلاش می‌کند زندگی پناهجویان را به طور روزافزون محدود کند و اروپا را از جنوب جهانی جدا کند. ما در برابر کارت اعتباری محدودکننده مقاومت می‌کنیم و می‌خواهیم همبستگی را به عمل تبدیل کنیم!</p>
+			<p>به زودی در هایدلبرگ و منطقه راین-نکار کارت پرداخت تبعیض‌آمیز برای همه پناهندگانی که از قوانین مزایای پناهندگی بهره می‌برند معرفی خواهد شد. پشت تصمیم برای کارت پرداخت، سیاستی نژادپرستانه است که سعی در محدود کردن روزافزون زندگی پناهندگان و جداسازی اروپا از جنوب جهانی دارد. ما در برابر کارت پرداخت محدودکننده اعتراض داریم و می‌خواهیم همبستگی را به عمل تبدیل کنیم!</p>
 
-			<h2>چرا ما کارت اعتباری را رد می‌کنیم؟</h2>
+			<h2>چرا ما کارت پرداخت را رد می‌کنیم؟</h2>
 
-			<p>کارت اعتباری به نوعی دست در خودمختاری پناهجویان وارد می‌کند و باعث می‌شود که شرکت در زندگی روزمره محدود شود. در منطقه راین-نکار یک حد نقدی ۵۰ یورویی وجود خواهد داشت. انتظار می‌رود که در هایدلبرگ نیز محدودیت مشابهی وجود داشته باشد. انتقال‌ها، خرید آنلاین و قراردادها یا غیرممکن یا با زحمت زیاد ممکن هستند. بسیاری از جنبه‌های زندگی به پول نقد نیاز دارند: به عنوان مثال، فروشگاه‌های کوچک، بازار هفتگی، بازارهای دست‌دوم یا حتی رویدادهای فرهنگی. همه این‌ها با کارت اعتباری محدود می‌شوند.</p>
+			<p>کارت پرداخت به معنای دخالت در استقلال افراد پناه‌جو است و منجر به محدود شدن مشارکت در زندگی روزمره می‌شود. در منطقه راین-نکار، محدودیت پول نقد ۵۰ یورو خواهد بود و انتظار می‌رود محدودیت مشابه‌ای نیز در هایدلبرگ وجود داشته باشد. انتقال‌ها، خریدهای آنلاین و قراردادها یا غیرممکن هستند یا با تلاش زیاد ممکن هستند. بسیاری از زمینه‌های زندگی به پول نقد نیاز دارند: به عنوان مثال، مغازه‌های کوچک، بازارهای هفتگی، بازارهای دست دوم و یا رویدادهای فرهنگی. همه این‌ها از طریق کارت پرداخت محدود می‌شود.</p>
 
-			<p>اگرچه کارت اعتباری از ظاهر به یک کارت بانکی شبیه است، اما امکانات استفاده آن بسیار محدودتر است زیرا کارت فقط در فروشگاه‌های خاصی کار می‌کند. و اگر افراد متأثر بخواهند با وجود کمبود کمک‌ها به خانواده خود در خارج از کشور کمک مالی کنند، آن‌ها با مشکلات زیادی روبرو خواهند شد. کارت از نظر حفاظتی داده‌ها نیز مشکل‌ساز است. کارت اعتباری به نیروها نمایی از داده‌ها و امکانات کنترلی می‌دهد.</p>
+			<p>حتی اگر کارت پرداخت از نظر ظاهری شبیه کارت های EC باشد، توانایی‌های کاربردی آن بسیار محدودتر است، زیرا کارت تنها در فروشگاه‌های خاصی کار می‌کند. و اگرچه حتی با وجود خدمات محدود، افرادی که می‌خواهند پولی برای خانواده‌هایشان در خارج از کشور کنار بگذارند، از این کار به شدت جلوگیری می‌شود. کارت از نظر حفاظت از داده‌ها مشکل‌ساز است. کارت پرداخت آزادي و امكانات كنترل را به اداره‌ها ارائه می‌کند.</p>
 
 
 			<h2>برنامه ما چیست؟</h2>
 
-			<p>ما نمی‌خواهیم در هایدلبرگ این کارت تبعیض‌آمیز و حذف‌کننده را بپذیریم و می‌خواهیم با افراد متأثر همبستگی نشان دهیم.</p>
 
-			<p>برای مقابله با محدودیت‌های کارت اعتباری، ما به صورت محلی متحد می‌شویم. به الگویی از بسیاری دیگر از ابتکارات در سطح کشور، ما نیز در هایدلبرگ و اطراف آن یک مبادله کوپن خرید راه‌اندازی می‌کنیم.</p>
+			<p>ما در هایدلبرگ این کارت تبعیض‌آمیز و خارج کننده را نمی‌پذیریم و می‌خواهیم همبستگی‌مان را با کسانی که تحت تأثیر هستند نشان دهیم.</p>
 
-			<p>اصل:</p>
+			<p>برای مقابله با محدودیت‌های کارت پرداخت، به صورت محلی گرد هم می‌آییم. بر اساس مدل بسیاری از دیگر ابتکارات در سطح ملی، ما نیز در هایدلبرگ و اطراف آن می‌خواهیم یک تبادل کوپن را سازماندهی کنیم.<p>
+
+			<p>اصل ماجرا:</p>
 
 			<ol>
-				<li>افراد با کارت اعتباری یک کوپن خرید از سوپرمارکت خریداری می‌کنند</li>
-				<li>در مبادله کوپن، ارزش کوپن را به صورت نقدی دریافت می‌کنند</li>
-				<li>افراد همبسته بدون کارت اعتباری کوپن‌ها را به پول نقد مبادله می‌کنند</li>
+				<li>افراد دارای کارت پرداخت یک کوپن خرید از سوپرمارکت خریداری می‌کنند</li>
+				<li>در تبادل کوپن‌ها، آن‌ها ارزش کوپن را به صورت نقدی دریافت می‌کنند</li>
+				<li>افراد متضامنه بدون کارت پرداخت، کوپن‌ها را در ازای پول نقد دریافت می‌کنند</li>
 			</ol>
 
 			<img id="cash_card" style="height:8em;" src="../static/img/cash_card.svg" />
 
-			<p>مبادلات قانونی نیستند بلکه پاسخی هستند به سیاستی که ممکن است خلاف قانون‌اساسی باشد زیرا حقوق اساسی افراد متأثر نقض می‌شود و حد نقدی ۵۰ یورو حداقل زندگی شرافتمندانه را به خطر می‌اندازد. (برای مطالعه بیشتر: <a href="https://www.proasyl.de/pressemitteilung/etappensieg-im-eilverfahren-gegen-restriktive-bezahlkarte-pro-asyl-und-gff-unterstuetzen-klagende-familie/">Etappensieg im Eilverfahren gegen restriktive Bezahlkarte: PRO ASYL und GFF unterstützen klagende Familie</a> | PRO ASYL)</p>
+			<p>تبادل‌ها غیرقانونی نیستند بلکه پاسخی به سیاستی است که احتمالاً از نظر قانونی متعارض است، زیرا حقوق بنیادین افراد تحت تأثیر را نقض می‌کند و محدودیت پول نقد ۵۰ یورو حداقل معیشت انسانی را به خطر می‌اندازد. (قابل مطالعه در: <a href="https://www.proasyl.de/pressemitteilung/etappensieg-im-eilverfahren-gegen-restriktive-bezahlkarte-pro-asyl-und-gff-unterstuetzen-klagende-familie/">پیروزی اولیه در یک فرایند اجرایی علیه کارت پرداخت محدودکننده: پرو آسیل و GFF از خانواده‌ شاکی حمایت می‌کنند</a> | پرو آسیل)</p>
 
-			<h2>چگونه می‌توانی پشتیبان کنی؟</h2>
+			<h2>چگونه می‌توانی حمایت کنی؟</h2>
 
-			<p>خوشحال خواهیم شد که با ما تماس بگیری و/یا در نشست‌های ما شرکت کنی، اگر...</p>
+			<p>با خوشحالی با ما تماس بگیر و یا به جلسات ما بیا، اگر که...</p>
 			<ul>
-				<li>... می‌خواهی دیدگاه‌های خود را مطرح کنی</li>
-				<li>... می‌خواهی در سازماندهی بازارهای مبادله کمک کنی</li>
-				<li>... می‌خواهی نوبت‌ها در بازار مبادله را بر عهده بگیری</li>
-				<li>... می‌توانی اتاق‌هایی در اختیار ما قرار دهی</li>
-				<li>... در مکان‌هایی مستقل هستی و آماده‌اید که در مکان‌های خود کوپن‌های خرید ارائه دهید</li>
-				<li>... می‌توانی به صورت جمعی کوپن‌های خرید را بگیرید، مثلاً برای خانه مشترک خود، پروژه خانه‌داری، انجمن...</li>
-				<li>... می‌خواهی در یک کارزار سیاسی علیه این حملات نژادپرستانه شرکت کنی</li>
-				<li>... می‌خواهی کمک کنی تا به صورت قانونی با کارت اعتباری مقابله کنیم یا حتی اگر می‌خواهی ما را بشناسی یا سوالاتی داری.</li>
+				<li>... می‌خواهی دیدگاه‌های خود را به ما معرفی کنی</li>
+				<li>... می‌خواهی در سازماندهی بازارهای تبادل حمایت کنی</li>
+				<li>... می‌خواهی شیفت‌های بازار تبادل را به عهده بگیری</li>
+				<li>... می‌توانی فضاهایی در اختیار ما بگذاری</li>
+				<li>... در فضاهای سازماندهی هستی و آماده هستید که در فضاهای خود کوپن خرید عرضه کنید</li>
+				<li>... می‌توانی به صورت جمعی کوپن‌های خرید را بپذیری، مانند: برای اتحادیه‌های خود، پروژه‌های خانه‌ای، انجمن‌های خود...</li>
+				<li>... می‌خواهی در یک کمپین سیاسی علیه این حملات نژادپرستانه کمک کنی</li>
+				<li>... می‌خواهی حمایت کنی تا به صورت قانونی علیه کارت پرداخت اقدام کنیم یا فقط می‌خواهی ما را بهتر بشناسی و یا سوالی داری.</li>
 			</ul>
 
-			<p>ما همچنین به کمک‌های مالی نیاز داریم. برای مبادلات، به یک حاشیه مالی نیاز داریم. علاوه بر این، به مقداری پول نیاز داریم، مثلاً برای مواد مانند بروشورها یا پوسترها، خرید‌های کوچکتر مانند صندوق‌های قابل قفل شدن یا اسکنرهای بارکدی یا اجاره‌های اتاق برای برنامه‌های اطلاعاتی. می‌توان رسیدهای کمک مالی صادر کرد.</p>
+			<p>ما علاوه بر این به کمک‌های مالی نیاز داریم. برای تبادل‌ها به یک حاشیه مالی نیاز داریم. همچنین به کمی بودجه برای موادی مانند اعلامیه‌ها یا پوسترها، خریدهای کوچک مانند جعبه‌های قابل قفل یا بارکد‌اسکنرها یا اجاره سالن‌ها برای رویدادهای اطلاعاتی نیاز داریم. رسیدهای کمک‌های مالی می‌توانند صادر شوند.</p>
 
 			<p>برای جهانی همبسته!</p>
 
-			<h2>ساختارهای فرامنطقه‌ای چگونه هستند؟</h2>
+			<h2>ساختارهای فراگیر چگونه به نظر می‌رسند؟</h2>
 
-			<p>در بسیاری از شهرها در حال حاضر ابتکاراتی علیه کارت اعتباری و مبادلات مشابه ما وجود دارد. ما در سطح ملی در شبکه "حقوق اجتماعی برابر برای همه!" (<a href="https://fluechtlingsrat-bw.de/allgemein/erklaerung-des-netzwerks-gleiche-soziale-rechte-fuer-alle/">وبسایت</a>, <a href="https://www.instagram.com/gleichesozialerechtefueralle">اینستاگرام</a>)</p>
+			<p>در بسیاری از شهرها ابتکاراتی علیه کارت پرداخت و تبادل‌ها مشابه ما وجود دارد. ما در سطح ملی در شبکه "حقوق اجتماعی برابر برای همه!" (<a href="https://fluechtlingsrat-bw.de/allgemein/erklaerung-des-netzwerks-gleiche-soziale-rechte-fuer-alle/">وب‌سایت</a>, <a href="https://www.instagram.com/gleichesozialerechtefueralle">اینستاگرام</a>) به هم پیوسته‌ایم.</p>
 
 			<h2>اطلاعات بیشتر</h2>
 			
 
 			<ul>
-				<li><a href="https://fluechtlingsrat-bw.de/aktuelles/wissenschaftliche-einschaetzung-der-bezahlkarte/">ارزیابی علمی کارت اعتباری</a><br/>Flüchtlingsrat Baden-Württemberg</li>
-				<li><a href="https://fluechtlingsrat-bw.de/aktuelles/immer-weniger-rechte-fuer-gefluechtete-menschen/">همیشه کمتر حق برای پناهجویان</a><br/>Flüchtlingsrat Baden-Württemberg</li>
-				<li><a href="https://www.landtag-bw.de/de/aktuelles/dpa-nachrichten/was-man-zur-neuen-bezahlkarte-fuer-fluechtlinge-wissen-muss-511916">چه باید درباره کارت اعتباری جدید برای پناهجویان بدانید</a><br/>Landtag Baden-Württemberg</li>
+				<li><a href="https://fluechtlingsrat-bw.de/aktuelles/wissenschaftliche-einschaetzung-der-bezahlkarte/">ارزیابی علمی کارت پرداخت</a><br/>شورای پناهندگان بادن-وورتمبرگ</li>
+				<li><a href="https://fluechtlingsrat-bw.de/aktuelles/immer-weniger-rechte-fuer-gefluechtete-menschen/">حقوق کمتر برای افراد پناهنده</a><br/>شورای پناهندگان بادن-وورتمبرگ</li>
+				<li><a href="https://www.landtag-bw.de/de/aktuelles/dpa-nachrichten/was-man-zur-neuen-bezahlkarte-fuer-fluechtlinge-wissen-muss-511916">آنچه باید درباره کارت پرداخت جدید برای پناهندگان بدانید</a><br/>پارلمان بادن-وورتمبرگ</li>
 			</ul>
 		</div>
 
 		<div id="openletter" class="content">
 			<h1>نامه باز</h1>
 
-			<p>خانم شهردار جانسن عزیز، اعضای محترم کمیته امور اجتماعی و برابری فرصت‌ها،</p>
+			<p>خانم شهردار جانسن محترم، اعضای محترم کمیته امور اجتماعی و تساوی فرصت‌ها،</p>
 
-			<p>با وحشت و حیرت، مشاهده می‌کنیم که کارت اعتباری برای افرادی که کمک‌های قانون تأمین نیازمندی‌های پناهجویان را دریافت می‌کنند، در بادن-وورتمبرگ به طور مرحله‌ای معرفی می‌شود. به دلیل تعدد جنبه‌های تبعیض‌آمیز، محدودکننده و حذف‌کننده کارت اعتباری، ما در هایدلبرگ مخالف معرفی آن هستیم.</p>
+			<p>با وحشت و ناباوری ما معرفی تدریجی کارت پرداخت برای افرادی که مزایا از قوانین پناهندگی دریافت می‌کنند در بادن-وورتمبرگ را مشاهده می‌کنیم.
+			به دلیل تعداد زیاد جنبه‌های تبعیض‌آمیز، محدودکننده و محروم‌کننده کارت پرداخت، ما مخالف معرفی آن در هایدلبرگ هستیم.</p>
 
 			<ol>
-			<li>افراد پناهجو در هایدلبرگ همچون دیگران حساب بانکی دارند. با کارت بانکی می‌توانند به پول خود دسترسی داشته باشند. اگر هنوز در بازار کار نباشند، در ابتدا کمک‌هایی طبق قانون تأمین نیازمندی‌های پناهجویان دریافت می‌کنند. این کمک‌ها در آینده به کارت‌های اعتباری منتقل می‌شود که با آن‌ها مصرف نقدی و انتقالات/تقاضاهای مالی محدود می‌شود. هدف: جلوگیری از انتقال پول به خانواده خود و قاچاقچیان، جلوگیری و کاهش عوامل جذب. این پیش‌زمینه‌ها برای کارت اعتباری مخالف حقوق اساسی ماست: ممنوعیت تبعیض، حفظ خانواده، حقوق شخصیتی.</li>
+			<li>افرادی که در جستجوی حمایت هستند، مانند دیگران، در هایدلبرگ حساب بانکی دارند. با کارت حساب بانکی، می‌توانند به پول خود دسترسی داشته باشند. اگر هنوز در بازار کار نیستند، ابتدا از قوانین AsylbLG بهره‌مند می‌شوند. این مبلغ قرار است در آینده روی کارت‌های پرداختی انتقال یابد که هم هزینه‌های نقدی و هم انتقال‌ها/سپرده‌ها را محدود می‌کند. هدف: عدم انتقال به خانواده خود و قاچاقچیان، محدود کردن، کاهش "عوامل جذب". این
+			زمینه برای کارت پرداخت، حقوق اساسی ما را نقض می‌کند: ممنوعیت تبعیض، حمایت از خانواده، حقوق شخصی.</li>
 
-			<li>کارت اعتباری دخالتی در حقوق شخصیتی است. با این کارت، به پناهجویان فشار وارد می‌شود. خرید در فروشگاه‌هایی که آنها ترجیح می‌دهند ممکن است انجام نشود زیرا راه‌اندازی دستگاه کارت‌خوان برای فروشگاه‌های کوچک بسیار گران است. برای انتقالات و پرداخت‌های خودکار نیاز به تأیید اداره اجتماعی است. اگر نیازهای ویژه‌ای وجود داشته باشد، باید درخواست کرد. ۵۰ یورو پول نقد یک مبلغی است که تحت نظر اداره است. تخصیص خود کارت اعتباری نیز تحت نظر اداره است. این نه تنها به مدیریت اضافی فشار می‌آورد، بلکه وابستگی افراد متأثر به اداره را وحشتناک می‌کند و همچنین شفافیت از بین می‌رود.</li>
+			<li>کارت پرداخت دخالتی در حقوق شخصی است. برای افراد پناه‌جو ایجاد محدودیت می‌کند. خرید در فروشگاه‌های مورد ترجیح آنها ممکن است امکان‌پذیر نباشد زیرا برای فروشگاه‌های کوچک نصب دستگاه خواننده کارت هزینه‌بر است. برای انتقال‌ها و سپرده‌ها به تأیید اداره اجتماعی نیاز است. اگر نیازهای خاصی وجود دارد، باید درخواست شود.
+			۵۰ یورو پول نقد مقداری است که به صلاحدید اداره بستگی دارد. تخصیص خود کارت پرداخت نیز به صلاحدید بستگی دارد. این نه تنها بار اضافی برای مدیریت ایجاد می‌کند، بلکه وابستگی بی‌نظیر و برجسته‌ از اداره برای افراد تحت تأثیر ایجاد می‌کند.</li>
 
-			<li>هدف از معرفی کارت اعتباری به هر حال به دست نخواهد آمد. گزارش هفتگی ۴۹/۲۰۲۴ DIW نشان می‌دهد که انتقالات پول به خارج تنها در مقیاس بسیار کم از پناهجویان می‌آید و بدون شک کمترین از کسانی که کمک‌های قانون تأمین نیازمندی‌های پناهجویان دریافت می‌کنند، چرا که این کمک‌ها (حداکثر ۴۴۱ یورو) از کمک‌های مدنی هم کمترند و مطمئناً به نیازهایی که حکم دادگاه قانون‌اساسی فدرال در سال ۲۰۱۲ تعیین کرده بود که برآورده‌کننده حداقل زندگی شرافتمندانه مهاجرتی باشد، نمی‌پردازد. همچنین دلایل فرار بی‌شک مهم‌تر از مسئله کمک است.</li>
+			<li>هدف معرفی کارت پرداخت به هر حال محقق نخواهد شد. گزارش هفتگی DIW شماره ۴۹/۲۰۲۴ نشان می‌دهد که انتقال‌های بین‌المللی تنها به میزان زیادی از پناهندگان نمی‌آید و به طور قطع کمترین منبع از کسانی است که مزایا از قبیل AsylbLG دریافت می‌کنند، زیرا این مزایا (حداکثر ۴۴۱ یورو) همچنان کمتر از کمک هزینه شهروندی است و قطعا نمی‌تواند نیازهای حقوقی حداقل معیشتی که دادگاه قانون اساسی
+			در ۲۰۱۲ تعیین کرد که نباید از نظر سیاست مهاجرتی محدود شود، را برآورده کند. همچنین دلایل پناهندگی بیش از سوالات مزایا وزن دارند.</li>
 
-			<li>معرفی کارت اعتباری محدودکننده بخشی از یک حمله بزرگ به حقوق افراد پناهجو است. تخریب حقوق اجتماعی پناهجویان با تقویت قلعه اروپا و تلاش‌ها برای خلاص شدن از مسئولیت حفاظت از پناهجویان (اعلامیه جهانی حقوق بشر ۱۹۴۸، ماده ۱۴) و تعهدات در نهایت به صورت کنوانسیون پناهندگان ژنو انجام می‌شود. به ناجوانمردان افراطی موفق شده‌اند که یک گفتمان تعیین‌کننده ایجاد کنند که افراد پناهجو را تنها به عنوان تهدیدی می‌پندارد. این روایت نژادپرستانه متأسفانه در سال‌های اخیر توسط احزاب دموکرات به طور فزاینده‌ای مطرح شده است. آنها با این کار فرآیندهای بی‌رحمی را پیش می‌برند و گفتمان جامعه را به سمت راست حرکت می‌دهند. کارت اعتباری چیزی جز یک سیاست نمایشی پوپولیستی نیست که به نژادپرستی خدمت می‌کند و پناهجویان را بیشتر حذف، تبعیض و کنترل می‌کند. ادغام به این شکل نیست!</li>
+			<li>معرفی یک کارت پرداخت محدودکننده بخشی از یک تهاجم گسترده به حقوق افراد جستجوگر حمایت است. کاهش حقوق اجتماعی پناهندگان همراه با تقویت قلعه اروپا و تلاش‌های برای خلع مسئولیت حفاظت از پناهندگان (اعلامیه حقوق بشر عمومی ۱۹۴۸، ماده ۱۴) و تعهدات به شکل کنوانسیون پناهندگان ژنو است. گروه‌های راست افراطی موفق به توسعه یک گفتمان تعیین‌کننده شده‌اند که افراد جستجوگر حمایت
+			را فقط به عنوان تهدید می‌بیند. متأسفانه، این گفتمان نژادپرستانه نیز توسط احزاب دموکراتیک به مدت سال‌ها به‌طور فزاینده‌ای اتخاذ شده است. آن‌ها با این کار فرآیندهای انبوه‌سازی اجتماعی را تقویت کرده و گفتمان اجتماعی را به سمت راست سوق می‌دهند. کارت پرداخت چیزی جز سیاست نمادین پوپولیستی نیست که نژادپرستی را تقویت کرده و افراد جستجوگر حمایت را بیشتر بیگانه، تبعیض‌آمیز و
+			کنترل می‌کند. ادغام منظور دیگری دارد!</li>
 
-			<li>معرفی کارت اعتباری نیست که گزینه دیگری نداشته باشد. در NRW یک قاعده حذف-پذیر معرفی شده است که به جوامع اجازه می‌دهد کارت اعتباری را معرفی نکنند. چندین شهر بزرگ از قبل از این قاعده استفاده کرده‌اند. اما در Niedersachsen هم مقاومت در حال ظهور است: اگرچه آنجا قاعده حذف‌پذیر وجود ندارد، شهر Hannover اظهار کرده که کارت اعتباری را معرفی نخواهد کرد و به این ترتیب به طور مفتوح مقاومت می‌کند. شورای شهرداری با اکثریت و با فراکسیون‌های CDU، SPD و سبزها اعلام کرد که کارت را معرفی نخواهند کرد زیرا تبعیض‌آمیز است.</li>
+			<li>معرفی کارت پرداخت بدون جایگزین نیست. NRW یک مقرره opt-out معرفی کرده است که به شهرها اجازه می‌دهد کارت پرداخت را معرفی نکنند. از این امکان شهرهای بزرگی استفاده کرده‌اند. ولی در نیدرزاکسن نیز مقاومت وجود دارد: اگرچه آنجا مقرره opt-out وجود ندارد، شهر هانوفر اعلام کرده که کارت پرداخت را معرفی نخواهد کرد و در این راستا با اعتماد به نفس مقاومت باز انجام می‌دهد.
+			شورای شهر به صورت اکثریت و با گروه‌های CDU، SPD و سبزها اعلام کرده‌اند که کارت را به دلیل تبعیض‌آمیز بودن معرفی نخواهند کرد.</li>
 
 			</ol>
 
-			<p>ما از فراکسیون‌های شورای شهرداری هایدلبرگ و مدیریت تقاضا می‌کنیم که کارت اعتباری تبعیض‌آمیز و بی‌معنی را در هایدلبرگ نیز رد کنند.</p>
+			<p>ما از گروه‌های شورای شهر هایدلبرگ و مدیریت خواستیم کارت پرداخت تبعیض‌آمیز و بی‌معنی را نیز در هایدلبرگ رد کنند.</p>
 
-			<p>امضاکنندگان نخستین</p>
+			<p>نام‌های اولیه امضا‌کنندگان</p>
 
 			<ul>
 				<li translate="no">Bettina Bauer-Teiwes</li>
@@ -167,14 +189,14 @@
 		</div>
 
 		<div id="contact" class="content">
-			<h1>تماس & کمک‌های مالی</h1>
+			<h1>تماس و کمک‌های مالی</h1>
 
-			<p>ما یک ساختار باز هستیم و مرتباً برای هماهنگی مراحل بعدی ملاقات می‌کنیم. آیا علاقه‌مندید که علیه کارت اعتباری فعال شوید؟ بنابراین به یکی از نشست‌های بعدی ما بیایید یا با ما تماس بگیرید.</p>
+			<p>ما یک ساختار باز هستیم و به طور مرتب برای هماهنگی مراحل بعدی ملاقات می‌کنیم. آیا علاقه‌مند به فعالیت علیه کارت پرداخت هستی؟ سپس به یکی از جلسات آینده ما بیا و یا با ما تماس بگیر.</p>
 
 			<h2>تماس</h2>
 
 			<ul>
-				<li>پست الکترونیک:<br/><a translate="no" href="mailto:kontakt@bezahlkarte-stoppen.de">kontakt@bezahlkarte-stoppen.de</a></li>
+				<li>ایمیل:<br/><a translate="no" href="mailto:kontakt@bezahlkarte-stoppen.de">kontakt@bezahlkarte-stoppen.de</a></li>
 				<li>اینستاگرام:<br/><a translate="no" href="https://www.instagram.com/bezahlkartestoppen">@bezahlkartestoppen</a></li>
 				<li translate="no">تلگرام:<br/><a translate="no" href="https://t.me/bezahlkarte_stoppen">bezahlkarte_stoppen</a></li>
 			</ul>
@@ -185,7 +207,7 @@
 Kirchengemeinde Heidelberg
 DE77 6725 0020 0001 2061 76
 Zweck: Gutschein 2813</pre>
-			<p>کاربرد مالی مهم است، در غیر این صورت کمک مالی نمی‌تواند تخصیص یابد!</p>
+			استفاده از این موضوع ضروری است، وگرنه نمی‌توان کمک مالی را تخصیص داد!
 		</div>
 
 	</body>
