--- a/www/fr/index.html
+++ b/www/fr/index.html
@@ -28,24 +28,38 @@
 			</div>
 		</div>
 
+
 		<div class="content">
-			<h1>Fribourg ?</h1>
-			<p>Malheureusement, nous avons mal indiqué le site Internet sur notre carte postale. Veuillez suivre ce lien :</p>
-			<div style="text-align:center;display:block;"><a href="https://bezahlkarte-stoppen.org">https://bezahlkarte-stoppen.org</a></div>
-		</h1></div>
+			<h1>Instructions pour l'échange de bons</h1>
+			<p>Tu reçois la carte de paiement et seulement 50€ en espèces par mois ? Si tu as besoin de plus d'argent liquide, échangeons-le !</p>
+
+			<img id="cash_card" style="height:8em;" src="../static/img/cash_card.svg" />
+
+			<ol>
+				<li><strong>Achetez un bon d'achat</strong> dans les magasins <span translate="no">Aldi</span>, <span translate="no">Lidl</span>, <span translate="no">Edeka</span>, <span translate="no">Kaufland</span>, <span translate="no">Penny</span>, <span translate="no">Rewe</span> ou <span translate="no">DM</span> pour <strong>50€</strong>.</li>
+				<li><strong>Apporte le bon à un point d'échange !</strong><br>Tu y recevras de l'argent liquide en échange des bons.</li>
+			</ol>
+
+			<h2>Où ?</h2>
+			<p translate="no">Bürgerbüro Die Linke<br />Theodor-Körner-Str. 7<br />69115 Heidelberg</p>
+
+			<p>Meilleur accès par les transports en commun depuis les arrêts <span translate="no">Betriebshof</span> et <span translate="no">Hauptbahnhof</span></p>
+			<h2>Quand ?</h2>
+			<p>Chaque 2e mardi et 3e vendredi du mois.</p>
+		</div>
 
 		<div class="content">
 			<h1>Arrêter la carte de paiement !</h1>
 
 			<img id="logo" src="../static/img/bzklogo.svg" />
 			
-			<p>A Heidelberg et dans le district Rhin-Neckar, la "carte de paiement" discriminatoire sera bientôt introduite pour toutes les personnes réfugiées qui reçoivent des prestations selon la loi sur les demandeurs d'asile. Derrière la décision de la carte de paiement se cache une politique raciste qui tente de restreindre toujours plus la vie des personnes en fuite et de séparer l'Europe du Sud global. Nous nous opposons à la carte de paiement restrictive et voulons faire de la solidarité une pratique !</p>
+			<p>A Heidelberg et dans le district Rhin-Neckar, la "carte de paiement" discriminatoire sera bientôt introduite pour toutes les personnes réfugiées qui reçoivent des prestations en vertu de la loi sur les demandeurs d'asile. Derrière la décision de la carte de paiement se cache une politique raciste qui tente de restreindre toujours plus la vie des personnes en fuite et de séparer l'Europe du Sud global. Nous nous opposons à la carte de paiement restrictive et voulons faire de la solidarité une pratique !</p>
 
 			<h2>Pourquoi refusons-nous la carte de paiement ?</h2>
 
 			<p>La carte de paiement représente une atteinte à l'autonomie des personnes réfugiées et a pour conséquence de limiter leur participation à la vie quotidienne. Dans le district Rhin-Neckar, la limite d'argent liquide est fixée à 50€. On peut s'attendre à ce qu'il y ait une limite similaire à Heidelberg. Les virements, les achats en ligne et les contrats ne seront pas possibles ou seulement avec beaucoup d'efforts. De nombreux domaines de la vie nécessitent de l'argent liquide : par exemple les petits commerces, le marché hebdomadaire, les marchés aux puces ou même les manifestations culturelles. Tout cela sera limité par la carte de paiement.</p>
 
-			<p>Même si l'apparence de la carte de paiement ressemble à celle d'une carte EC, ses possibilités d'utilisation sont beaucoup plus limitées, car la carte ne fonctionne que dans des magasins spécifiques. Et si les personnes concernées souhaitent mettre de l'argent de côté pour soutenir financièrement leur famille à l'étranger, malgré les maigres prestations, cela leur est très difficile. La carte pose des problèmes en matière de protection des données. La carte de paiement offre aux autorités un aperçu et des possibilités de contrôle.</p>
+			<p>Même si l'apparence de la carte de paiement ressemble à celle d'une carte EC, ses possibilités d'utilisation sont beaucoup plus limitées, car la carte ne fonctionne que dans des magasins spécifiques. Et si les personnes concernées souhaitent mettre de l'argent de côté pour soutenir financièrement leur famille à l'étranger, malgré le peu de prestations, cela leur est très difficile. La carte pose des problèmes en matière de protection des données. La carte de paiement offre aux autorités un aperçu et des possibilités de contrôle.</p>
 
 
 			<h2>Qu'allons-nous faire ?</h2>
@@ -65,7 +79,7 @@
 
 			<img id="cash_card" style="height:8em;" src="../static/img/cash_card.svg" />
 
-			<p>Les actions de troc ne sont pas illégales, mais constituent une réponse à une politique présumée inconstitutionnelle, puisque les droits fondamentaux des personnes concernées sont violés et que le plafond de 50 € en espèces menace le minimum vital décent. (A lire sous : <a href="https://www.proasyl.de/pressemitteilung/etappensieg-im-eilverfahren-gegen-restriktive-bezahlkarte-pro-asyl-und-gff-unterstuetzen-klagende-familie/">Victoire d'étape dans la procédure d'urgence contre la carte de paiement restrictive : PRO ASYL et GFF soutiennent une famille plaignante</a> | PRO ASYL)</p>
+			<p>Les actions d'échange ne sont pas illégales, mais constituent une réponse à une politique présumée inconstitutionnelle, puisque les droits fondamentaux des personnes concernées sont violés et que le plafond de 50 € en espèces menace le minimum vital décent. (A lire sous : <a href="https://www.proasyl.de/pressemitteilung/etappensieg-im-eilverfahren-gegen-restriktive-bezahlkarte-pro-asyl-und-gff-unterstuetzen-klagende-familie/">Victoire d'étape dans la procédure d'urgence contre la carte de paiement restrictive : PRO ASYL et GFF soutiennent une famille plaignante</a> | PRO ASYL)</p>
 
 			<h2>Comment peux-tu soutenir ?</h2>
 
@@ -81,13 +95,13 @@
 				<li>... Si tu veux nous soutenir, si tu veux agir juridiquement contre la carte de paiement ou si tu veux simplement faire notre connaissance ou si tu as des questions.</li>
 			</ul>
 
-			<p>Nous dépendons également des dons. Nous avons besoin d'un tampon financier pour les actions d'échange. De plus, nous avons besoin d'un peu d'argent, par exemple pour du matériel comme des flyers ou des affiches, pour de petites acquisitions comme des caisses verrouillables ou des scanners de codes-barres ou pour la location de salles pour des manifestations d'information. Des reçus de dons peuvent être délivrés.</p>
+			<p>Nous dépendons également des dons. Nous avons besoin d'un tampon financier pour les actions d'échange. De plus, nous avons besoin d'un peu d'argent, par exemple pour du matériel comme des flyers ou des affiches, pour de petites acquisitions comme des caisses verrouillables ou des scanners de codes-barres ou pour la location de salles pour des manifestations d'information. Des reçus de dons peuvent être établis.</p>
 
 			<p>Pour un monde solidaire !</p>
 
 			<h2>A quoi ressemblent les structures interrégionales ?</h2>
 
-			<p>Il existe déjà dans de nombreuses villes des initiatives contre la carte de paiement et des initiatives d'échange comme la nôtre. Nous sommes reliés à l'échelle nationale au sein du réseau "Mêmes droits sociaux pour tous !"<a href="https://fluechtlingsrat-bw.de/allgemein/erklaerung-des-netzwerks-gleiche-soziale-rechte-fuer-alle/">(site web</a>, <a href="https://www.instagram.com/gleichesozialerechtefueralle">Instagram</a>)</p>
+			<p>Il existe déjà dans de nombreuses villes des initiatives contre la carte de paiement et des initiatives d'échange comme la nôtre. Nous sommes reliés au niveau national par le réseau "Mêmes droits sociaux pour tous !"<a href="https://fluechtlingsrat-bw.de/allgemein/erklaerung-des-netzwerks-gleiche-soziale-rechte-fuer-alle/">(site web</a>, <a href="https://www.instagram.com/gleichesozialerechtefueralle">Instagram</a>)</p>
 
 			<h2>Plus d'informations</h2>
 			
@@ -109,7 +123,7 @@
 			<ol>
 			<li>Les personnes en quête de protection ont un compte à Heidelberg comme les autres. Avec la carte de compte courant, ils peuvent disposer de leur argent. S'ils ne sont pas encore dans la vie active, ils reçoivent d'abord des prestations selon la AsylbLG. À l'avenir, celles-ci seront transférées sur des cartes de paiement qui permettront de limiter les dépenses en espèces ainsi que les virements/prélèvements. Objectif : éviter les transferts à sa propre famille et aux passeurs, dissuasion, réduction des "facteurs d'attraction". Ce contexte de carte de paiement va à l'encontre de nos droits fondamentaux : l'interdiction de discrimination, la protection de la famille, les droits de la personne.</li>
 
-			<li>La carte de paiement est une atteinte aux droits de la personne. Les personnes qui ont fui leur pays sont ainsi bridées. Les achats dans les magasins qu'elles préfèrent peuvent ne pas avoir lieu, car l'installation du lecteur de carte de débit est trop coûteuse pour les petits magasins. Pour les virements et les prélèvements, il faut l'autorisation des services sociaux. S'il existe des besoins particuliers, une demande doit être faite. 50 € en espèces est un montant soumis à l'appréciation de l'office. L'attribution de la carte de paiement elle-même est soumise à l'appréciation. Non seulement cela va créer une charge supplémentaire pour l'administration, mais cela rend également monstrueuse la dépendance des personnes concernées vis-à-vis de l'Office, notamment parce que la transparence est perdue pour elles.</li>
+			<li>La carte de paiement est une atteinte aux droits de la personne. Les personnes qui ont fui leur pays sont ainsi bridées. Les achats dans les magasins qu'elles préfèrent peuvent ne pas avoir lieu, car l'installation du lecteur de carte de débit est trop coûteuse pour les petits magasins. Pour les virements et les prélèvements, il faut l'autorisation des services sociaux. S'il y a des besoins particuliers, une demande doit être faite. 50 € en espèces est un montant soumis à l'appréciation de l'office. L'attribution de la carte de paiement elle-même est soumise à l'appréciation. Non seulement cela va créer une charge supplémentaire pour l'administration, mais cela rend également monstrueuse la dépendance des personnes concernées vis-à-vis de l'Office, notamment parce que la transparence est perdue pour elles.</li>
 
 			<li>L'objectif de l'introduction de la carte de paiement ne sera de toute façon pas atteint. Le rapport hebdomadaire 49/2024 du DIW montre que les transferts de fonds à l'étranger ne proviennent que dans une très faible mesure des réfugiés, et certainement le moins de ceux qui reçoivent des prestations selon la AsylbLG, car ces prestations (441€ maximum) sont encore inférieures au Bürgergeld et ne répondent certainement pas aux exigences posées par l'arrêt de la Cour constitutionnelle allemande de 2012, selon lequel le minimum vital ne doit pas être relativisé par la politique migratoire. Il va de soi que les raisons de la fuite pèsent plus lourd que la question des prestations.</li>
 
