--- a/www/ru/index.html
+++ b/www/ru/index.html
@@ -28,11 +28,25 @@
 			</div>
 		</div>
 
+
 		<div class="content">
-			<h1>Фрайбург?</h1>
-			<p>К сожалению, мы указали неправильный веб-сайт на нашей открытке. Пожалуйста, нажмите здесь:</p>
-			<div style="text-align:center;display:block;"><a href="https://bezahlkarte-stoppen.org">https://bezahlkarte-stoppen.org</a></div>
-		</h1></div>
+			<h1>Инструкции по обмену ваучеров</h1>
+			<p>Вы получаете платежную карту и всего 50 евро наличными в месяц? Если вам нужно больше денег, давайте обменяемся!</p>
+
+			<img id="cash_card" style="height:8em;" src="../static/img/cash_card.svg" />
+
+			<ol>
+				<li><strong>Купите ваучер</strong> в магазинах <span translate="no">Aldi</span>, <span translate="no">Lidl</span>, <span translate="no">Edeka</span>, <span translate="no">Kaufland</span>, <span translate="no">Penny</span>, <span translate="no">Rewe</span> или <span translate="no">DM</span> за <strong>50 евро</strong>.</li>
+				<li><strong>Отнесите ваучер в центр обмена!</strong><br>Здесь вы получите деньги за ваучеры.</li>
+			</ol>
+
+			<h2>Где?</h2>
+			<p translate="no">Bürgerbüro Die Linke<br />Theodor-Körner-Str. 7<br />69115 Heidelberg</p>
+
+			<p>Лучше всего добираться на общественном транспорте с автобусных остановок <span translate="no">Betriebshof</span> и <span translate="no">Hauptbahnhof</span></p>
+			<h2>Когда?</h2>
+			<p>Каждый 2-й вторник и каждую 3-ю пятницу месяца.</p>
+		</div>
 
 		<div class="content">
 			<h1>Остановите платежную карту!</h1>
@@ -45,7 +59,7 @@
 
 			<p>Платежная карта представляет собой посягательство на автономию беженцев и ограничивает их участие в повседневной жизни. В округе Рейн-Неккар будет установлен лимит наличных в размере 50 евро. Следует ожидать, что аналогичное ограничение будет введено и в Гейдельберге. Банковские переводы, онлайн-покупки и контракты невозможны или возможны только с большими усилиями. Многие сферы жизни требуют наличных денег: например, небольшие магазины, еженедельные рынки, блошиные рынки или культурные мероприятия. Все это ограничено платежной картой.</p>
 
-			<p>Даже если платежная карта внешне похожа на дебетовую, возможности ее применения гораздо более ограничены, поскольку она действует только в определенных магазинах. И если пострадавшие хотят отложить деньги, чтобы финансово поддержать свою семью за границей, несмотря на ограниченные льготы, это становится гораздо сложнее. Карта проблематична с точки зрения защиты данных. Платежная карта открывает перед властями новые возможности для контроля.</p>
+			<p>Несмотря на то что платежная карта внешне похожа на дебетовую, возможности ее применения гораздо более ограничены, так как она действует только в определенных магазинах. И если пострадавшие хотят отложить деньги, чтобы финансово поддержать свою семью за границей, несмотря на ограниченные льготы, это становится гораздо сложнее. Карта проблематична с точки зрения защиты данных. Платежная карта открывает перед властями новые возможности для контроля.</p>
 
 
 			<h2>Что мы будем делать?</h2>
@@ -107,7 +121,7 @@
 			<p>Мы шокированы и озадачены постепенным введением в Баден-Вюртемберге платежной карты для лиц, получающих пособие для лиц, ищущих убежище. Из-за многочисленных дискриминационных, ограничительных и исключающих аспектов платежной карты мы выступаем против ее введения в Хайдельберге.</p>
 
 			<ol>
-			<li>У людей, ищущих защиты в Гейдельберге, есть счет, как и у всех остальных. Для доступа к своим деньгам они могут использовать карточку текущего счета. Если они еще не трудоустроены, то первоначально получают пособия в соответствии с AsylbLG. В дальнейшем они должны быть переведены на платежные карты, с которых ограничены как расходы наличными, так и переводы/дебетовые операции. Цель: отсутствие переводов собственной семье и контрабандистам, сдерживание, снижение "факторов притяжения". Такая основа для платежных карт нарушает наши фундаментальные права: запрет на дискриминацию, защиту семьи, личные права.</li>
+			<li>У людей, ищущих защиты в Гейдельберге, есть счет, как и у всех остальных. Для доступа к своим деньгам они могут использовать карточку текущего счета. Если они еще не трудоустроены, то первоначально получают пособия в соответствии с AsylbLG. В дальнейшем они будут перечисляться на платежные карты, с которых ограничены как расходы наличными, так и переводы/дебетовые операции. Цель: отказ от переводов собственной семье и контрабандистам, сдерживание, снижение "факторов притяжения". Такая основа для платежных карт нарушает наши фундаментальные права: запрет на дискриминацию, защиту семьи, личные права.</li>
 
 			<li>Платежная карта - это посягательство на личные права. Люди, покинувшие свою страну, становятся объектом контроля. Они могут лишиться возможности делать покупки в любимых магазинах, потому что небольшим магазинам слишком дорого устанавливать считывающее устройство для дебетовых карт. Переводы и прямые дебетовые платежи требуют разрешения от управления социального обеспечения. Если есть особые потребности, необходимо подать заявление. 50 € наличными - это сумма, которая выдается по усмотрению управления. Выделение самой платежной карты зависит от усмотрения. Это не только ляжет дополнительным бременем на администрацию, но и поставит пострадавших в чудовищную зависимость от ведомства, в том числе и потому, что для них будет потеряна прозрачность.</li>
 
