--- a/www/ar/index.html
+++ b/www/ar/index.html
@@ -28,96 +28,112 @@
 			</div>
 		</div>
 
+
 		<div class="content">
-			<h1>فرايبورغ؟</h1>
-			<p>للأسف، لقد أخطأنا في ذكر الموقع الإلكتروني على بطاقتنا البريدية. يرجى الذهاب هنا:</p>
-			<div style="text-align:center;display:block;"><a href="https://bezahlkarte-stoppen.org">https://bezahlkarte-stoppen.org</a></div>
+			<h1>تعليمات لتبادل القسائم</h1>
+			<p>هل تحصل على بطاقة الدفع و50 يورو نقدًا فقط في الشهر؟ إذا كنت بحاجة إلى المزيد من النقود، فدعنا نتبادل!</p>
+
+			<img id="cash_card" style="height:8em;" src="../static/img/cash_card.svg" />
+
+			<ol>
+				<li><strong>قم بشراء قسيمة</strong> في المتاجر <span translate="no">Aldi</span>، <span translate="no">Lidl</span>، <span translate="no">Edeka</span>، <span translate="no">Kaufland</span>، <span translate="no">Penny</span>، <span translate="no">Rewe</span> أو <span translate="no">DM</span> مقابل <strong>50€</strong></li>
+				<li><strong>أحضر القسيمة إلى نقطة التبادل!</strong><br>هنا تحصل على النقود مقابل القسائم.</li>
+			</ol>
+
+			<h2>أين؟</h2>
+			<p translate="no">Bürgerbüro Die Linke<br>Theodor-Körner-Str. 7<br>69115 Heidelberg</p>
+
+			<p>يمكن الوصول إليها بشكل أفضل عبر وسائل النقل العامة من محطتي <span translate="no">Betriebshof</span> و<span translate="no">Hauptbahnhof</span></p>
+			<h2>متى؟</h2>
+			<p>كل ثاني ثلاثاء وكل ثالث جمعة في الشهر.</p>
 		</div>
 
 		<div class="content">
-			<h1>إيقاف بطاقة الدفع!</h1>
+			<h1>أوقف بطاقة الدفع!</h1>
 
 			<img id="logo" src="../static/img/bzklogo.svg" />
 			
-			<p>في هايدلبرغ ومنطقة راين نيكار، سيتم قريبًا تقديم بطاقة الدفع التمييزية لجميع الأشخاص اللاجئين الذين يتلقون خدمات بموجب قانون استحقاقات طالبي اللجوء. تقف خلف القرار المتعلق ببطاقة الدفع سياسة عنصرية تحاول بشكل متزايد تقييد حياة اللاجئين وعزل أوروبا عن الجنوب العالمي. نحن نعترض على بطاقة الدفع التقييدية ونريد أن نجعل التضامن ممارسة عملية!</p>
+			<p>في هايدلبرغ ومنطقة راين-نيكار، سيتم قريباً تقديم بطاقة "الدفع" التمييزية لجميع اللاجئين الذين يتلقون المساعدات وفقًا لقانون مزايا طالبي اللجوء. وراء القرار بتقديم بطاقة الدفع تكمن سياسات عنصرية، تحاول تقييد حياة اللاجئين واستبعاد أوروبا عن الجنوب العالمي. نحن نقاوم بطاقة الدفع التقييدية ونريد أن نجعل التضامن ممارسة!</p>
 
 			<h2>لماذا نرفض بطاقة الدفع؟</h2>
 
-			<p>تمثل بطاقة الدفع تدخلاً في استقلال الأفراد اللاجئين وتؤدي إلى تقييد المشاركة في الحياة اليومية. في منطقة راين نيكار سيكون هناك حد نقدي قدره 50 يورو. من المتوقع أن يكون هناك قيد مشابه أيضًا في هايدلبرغ. التحويلات المالية، التسوق عبر الإنترنت والعقود غير ممكنة أو تحتاج إلى جهد كبير. العديد من مجالات الحياة تتطلب النقود: على سبيل المثال، المتاجر الصغيرة، أسواق المزارعين، الأسواق المفتوحة أو حتى الفعاليات الثقافية. كل هذا يتم تقييده من خلال بطاقة الدفع.</p>
+			<p>تعتبر بطاقة الدفع تدخلاً في استقلالية اللاجئين وتؤدي إلى تقييد المشاركة في الحياة اليومية. ستكون هناك حد نقدي قدره 50€ في منطقة راين-نيكار. من المتوقع أن يكون هناك أيضًا قيود مماثلة في هايدلبرغ. التحويلات المصرفية، التسوق عبر الإنترنت والعقود ليست ممكنة أو تتطلب جهدًا كبيرًا. تحتاج العديد من جوانب الحياة اليومية إلى النقود: مثل المتاجر الأصغر، السوق الأسبوعي، الأسواق الرخيصة أو حتى الفعاليات الثقافية. كل هذا يتم تقييده ببطاقة الدفع.</p>
 
-			<p>حتى وإن كانت بطاقة الدفع تشبه من الخارج بطاقة الحساب الجاري، فإن استخداماتها محدودة بشكل أكبر، حيث أنها تعمل فقط في متاجر محددة. وعندما يرغب المتأثرون بجمع الأموال رغم تقديمات النقد الضيقة لدعم أسرتهم في الخارج، فإن ذلك يصبح صعباً عليهم. البطاقة تمثل مشكلة فيما يتعلق بحماية البيانات. بطاقة الدفع توفر للسلطات نظرة ووسائل للتحكم.</p>
+			<p>حتى لو كانت بطاقة الدفع تبدو من الخارج كبطاقة EC، فإن تطبيقاتها محدودة بكثير، حيث تعمل البطاقة فقط في متاجر معينة. إذا أراد المتأثرون رغم الخدمات المحدودة وضع أموال جانبًا لدعم أسرهم في الخارج، فإن ذلك يصبح صعبًا للغاية. تعتبر البطاقة مشكلة من حيث حماية البيانات. توفر بطاقة الدفع للمؤسسات نظرة وفرصًا للتحكم.</p>
 
-			<h2>ماذا نخطط للقيام به؟</h2>
 
-			<p>نريد في هايدلبرغ عدم قبول هذه البطاقة التمييزية والإقصائية، ونريد أن نظهر تضامننا مع المتضررين.</p>
+			<h2>ما الذي نخطط للقيام به؟</h2>
 
-			<p>لمواجهة القيود التي تفرضها بطاقة الدفع، نتحد محليًا. بناءً على نموذج العديد من المبادرات الأخرى على مستوى البلاد، نريد أيضًا تنظيم تبادل القسائم في هايدلبرغ والمناطق المحيطة بها.</p>
+
+			<p>نحن لا نريد قبول هذه البطاقة التمييزية والمستبعِدة في هايدلبرغ ونظهر التضامن مع المتضررين.</p>
+
+			<p>لمواجهة قيود بطاقة الدفع، نتجمع محليًا معًا. بناءً على نموذج العديد من المبادرات الأخرى على الصعيد الوطني، نريد أيضًا في هايدلبرغ ومحيطها تنظيم تبادل القسائم.<p>
 
 			<p>المبدأ:</p>
 
 			<ol>
-				<li>يقوم الأشخاص الذين لديهم بطاقة الدفع بشراء قسيمة من السوبرماركت</li>
-				<li>عند التبادل، يحصلون على القيمة النقدية للقسيمة نقداً</li>
-				<li>الأفراد المتضامنون بدون بطاقة الدفع يحصلون على القسائم مقابل النقود</li>
+				<li>يقوم الأشخاص الذين لديهم بطاقة الدفع بشراء قسيمة الشراء من السوبر ماركت</li>
+				<li>في تبادل القسائم يحصلون على قيمة القسيمة نقدًا</li>
+				<li>الأشخاص المتضامنون الذين ليس لديهم بطاقة الدفع يحصلون على القسائم مقابل النقود</li>
 			</ol>
 
 			<img id="cash_card" style="height:8em;" src="../static/img/cash_card.svg" />
 
-			<p>التبادلات ليست غير قانونية بل هي رد على سياسة قد تكون غير دستورية، حيث يتم انتهاك الحقوق الأساسية للمتأثرين وتهدد الحد الأقصى النقدي بمبلغ 50 يورو الحد الأدنى للوجود الكريم. (يمكن الاطلاع على المزيد تحت: <a href="https://www.proasyl.de/pressemitteilung/etappensieg-im-eilverfahren-gegen-restriktive-bezahlkarte-pro-asyl-und-gff-unterstuetzen-klagende-familie/">Etappensieg im Eilverfahren gegen restriktive Bezahlkarte: PRO ASYL und GFF unterstützen klagende Familie</a> | PRO ASYL)</p>
+			<p>لا تُعتبر عمليات التبادل مخالفة للقانون بل هي استجابة لسياسة يُعتقد أنها غير دستورية، حيث يتم انتهاك حقوق الأساسية للمتضررين ويهدد حد النقود البالغ 50€ الحد الأدنى للوجود الكريم. (يمكن الاطلاع عليه في: <a href="https://www.proasyl.de/pressemitteilung/etappensieg-im-eilverfahren-gegen-restriktive-bezahlkarte-pro-asyl-und-gff-unterstuetzen-klagende-familie/">Etappensieg im Eilverfahren gegen restriktive Bezahlkarte: PRO ASYL und GFF unterstützen klagende Familie</a> | PRO ASYL)</p>
 
 			<h2>كيف يمكنك المساعدة؟</h2>
 
-			<p>يمكنك الاتصال بنا و/أو المشاركة في اجتماعاتنا إذا كنت...</p>
+			<p>يرجى الاتصال بنا والمشاركة في اجتماعاتنا إذا كنت...</p>
 			<ul>
-				<li>... ترغب في تقديم وجهات نظرك الخاصة</li>
-				<li>... ترغب في دعم تنظيم أسواق التبادل</li>
-				<li>... ترغب في تحمل نوبات العمل في سوق التبادل</li>
-				<li>... تستطيع توفير أماكن</li>
-				<li>... منظم في أماكن ومستعد لتقديم قسائم الشراء</li>
-				<li>... تستطيع بشكل جماعي شراء قسائم الشراء، مثل شقتك أو مشروعك المنزلي، أو جمعيتك...</li>
+				<li>... تريد تقديم وجهات نظرك الخاصة</li>
+				<li>... تريد المساعدة في تنظيم أسواق التبادل</li>
+				<li>... تريد تحمل ساعات في سوق التبادل</li>
+				<li>... يمكنك توفير أماكن لنا</li>
+				<li>... أنت منظم في أماكن ومستعد لتوزيع قسائم الشراء في أماكنك</li>
+				<li>... يمكنك شراء كميات جماعية من قسائم الشراء منا، مثلًا لجماعتك، مشروعك السكني، جمعيتك...</li>
 				<li>... تريد المشاركة في حملة سياسية ضد هذه الهجمات العنصرية</li>
-				<li>... تريد دعم التعامل القانوني ضد بطاقة الدفع أو ترغب فقط في التعرف علينا أو لديك أسئلة.</li>
+				<li>... تريد دعم الجهود القانونية ضد بطاقة الدفع أو ببساطة إذا كنت تريد التعرف علينا أو لديك أسئلة.</li>
 			</ul>
 
-			<p>نحن نعتمد أيضًا على التبرعات. نحتاج إلى مخزن مالي للمبادلات. وبالإضافة إلى ذلك، نحتاج إلى بعض المال، على سبيل المثال للمواد مثل المنشورات أو الملصقات، والمشتريات الصغيرة مثل الصناديق القابلة للقفل أو الماسحات الضوئية للرموز الشريطية أو إيجارات الأماكن لعقد الفعاليات الإعلامية. يمكن إصدار إيصالات التبرعات.</p>
+			<p>نحن نعتمد أيضًا على التبرعات. نحتاج إلى وسادة مالية لعمليات التبادل. بالإضافة إلى ذلك، نحتاج إلى بعض المال لمواد مثل المنشورات أو الملصقات، وشراء أشياء صغيرة مثل صناديق القفل أو ماسحات الباركود أو إيجارات الغرف لعقد فعاليات إعلامية. يمكن إصدار إيصالات التبرعات.</p>
 
 			<p>من أجل عالم متضامن!</p>
 
-			<h2>كيف تبدو الهياكل الإقليمية؟</h2>
+			<h2>كيف تبدو الهياكل عبر المنطقة؟</h2>
 
-			<p>هناك بالفعل مبادرات في العديد من المدن ضد بطاقة الدفع ومبادرات التبادل مثل مبادرتنا. نحن متصلون على مستوى البلاد في شبكة "حقوق اجتماعية متساوية للجميع!" (<a href="https://fluechtlingsrat-bw.de/allgemein/erklaerung-des-netzwerks-gleiche-soziale-rechte-fuer-alle/">الموقع</a>, <a href="https://www.instagram.com/gleichesozialerechtefueralle">Instagram</a>)</p>
+			<p>هناك بالفعل مبادرات في العديد من المدن ضد بطاقة الدفع ومبادرات التبادل مثل مبادرتنا. نحن مرتبطون على المستوى الوطني في شبكة "حقوق اجتماعية متساوية للجميع!" (<a href="https://fluechtlingsrat-bw.de/allgemein/erklaerung-des-netzwerks-gleiche-soziale-rechte-fuer-alle/">موقع الويب</a>، <a href="https://www.instagram.com/gleichesozialerechtefueralle">إنستغرام</a>)</p>
 
 			<h2>مزيد من المعلومات</h2>
 			
 
 			<ul>
-				<li><a href="https://fluechtlingsrat-bw.de/aktuelles/wissenschaftliche-einschaetzung-der-bezahlkarte/">التقييم العلمي لبطاقة الدفع</a><br/>مجلس اللاجئين ولاية بادن فورتمبيرغ</li>
-				<li><a href="https://fluechtlingsrat-bw.de/aktuelles/immer-weniger-rechte-fuer-gefluechtete-menschen/">حقوق أقل للاجئين بمرور الوقت</a><br/>مجلس اللاجئين ولاية بادن فورتمبيرغ</li>
-				<li><a href="https://www.landtag-bw.de/de/aktuelles/dpa-nachrichten/was-man-zur-neuen-bezahlkarte-fuer-fluechtlinge-wissen-muss-511916">ما يجب معرفته عن بطاقة الدفع الجديدة للاجئين</a><br/>برلمان ولاية بادن فورتمبيرغ</li>
+				<li><a href="https://fluechtlingsrat-bw.de/aktuelles/wissenschaftliche-einschaetzung-der-bezahlkarte/">التقييم العلمي لبطاقة الدفع</a><br/>شبكة دعم اللاجئين في بادن-فورتمبيرغ</li>
+				<li><a href="https://fluechtlingsrat-bw.de/aktuelles/immer-weniger-rechte-fuer-gefluechtete-menschen/">حقوق أقل وأقل للاجئين</a><br/>شبكة دعم اللاجئين في بادن-فورتمبيرغ</li>
+				<li><a href="https://www.landtag-bw.de/de/aktuelles/dpa-nachrichten/was-man-zur-neuen-bezahlkarte-fuer-fluechtlinge-wissen-muss-511916">ما يجب معرفته عن بطاقة الدفع الجديدة للاجئين</a><br/>برلمان بادن-فورتمبيرغ</li>
 			</ul>
 		</div>
 
 		<div id="openletter" class="content">
-			<h1>رسالة مفتوحة</h1>
+			<h1>خطاب مفتوح</h1>
 
-			<p>السيدة العمدة يانسن المحترمة، أعضاء لجنة الشؤون الاجتماعية وتكافؤ الفرص المحترمون،</p>
+			<p>السيدة العمدة يانسن المحترمة، والسادة أعضاء لجنة الشؤون الاجتماعية وتكافؤ الفرص،</p>
 
-			<p>بشدة وصدمة نلاحظ الإدخال التدريجي لبطاقة الدفع للأشخاص الذين يتلقون الخدمات بموجب قانون استحقاقات طالبي اللجوء في ولاية بادن فورتمبيرغ. بسبب العديد من الجوانب التمييزية والمقيّدة والاستبعادية لبطاقة الدفع، نعترض على تقديمها في هايدلبرغ.</p>
+			<p>نشاهد بفزع وصدمة إدخال بطاقة الدفع تدريجيًا للأشخاص الذين يحصلون على مزايا قانون طالبي اللجوء في بادن-فورتمبيرغ. نظرًا لعدد الجوانب التمييزية والتقييدية والإقصائية لبطاقة الدفع، فإننا نعترض على إدخالها في هايدلبرغ.</p>
 
 			<ol>
-			<li>الأشخاص الباحثون عن الحماية في هايدلبرغ لديهم حساب مثل الآخرين. مع بطاقة الحساب الجاري، يمكنهم الوصول إلى أموالهم. إذا لم يكونوا في سوق العمل بعد، فإنهم يحصلون في البداية على خدمات بموجب قانون AsylbLG. من المفترض أن يتم تحويل هذه الخدمات مستقبلاً إلى بطاقات الدفع، التي تقيد كل من النفقات النقدية وكذلك التحويلات/الخصومات. الهدف: لا تحويلات إلى العائلة أو إلى المهربين، ردع، تقليل "عوامل الجذب". هذا الأساس وراء بطاقة الدفع ينتهك حقوقنا الأساسية: حظر التمييز، حماية الأسرة، الحقوق الشخصية.</li>
+			<li>الأشخاص الباحثون عن الحماية لديهم في هايدلبرغ، كما هو الحال مع الجميع، حساب بنكي. يمكنهم من خلال بطاقة الحساب البنكي التصرف بأموالهم. إذا لم يكونوا بعد في سوق العمل، فإنهم يحصلون بدايةً على مزايا قانون طالبي اللجوء. من المفترض أن تُحوَّل هذه المزايا إلى بطاقات الدفع، حيث يتم تقييد النفقات النقدية وكذلك التحويلات/الأوامر الدائمة. الهدف: لا تحويلات إلى الأسرة الخاصة أو إلى المهربين، الردع، تقليل عوامل الجذب. هذا الخلفية لبطاقة الدفع تتعارض مع حقوقنا الأساسية: حظر التمييز، حماية الأسرة، الحقوق الشخصية.</li>
 
-			<li>بطاقة الدفع هي تدخل في الحقوق الشخصية. يتم تقييد الناس اللاجئين بها. قد لا يحدث التسوق في المحلات التي يفضلونها، نظرًا لأن إعداد جهاز القراءة للبطاقات الدائنة مكلف للغاية للمحلات الصغيرة. بالنسبة للتحويلات والخصومات، تحتاج إلى موافقة إدارة الشؤون الاجتماعية. إذا كان هناك احتياجات خاصة، يجب تقديم طلب. مبلغ النقد 50 يورو هو مبلغ يعتمد على تقدير المكتب. تعيين بطاقة الدفع نفسها يخضع لتقدير المكتب. هذا لن يثقل كاهل الإدارة فحسب، بل يجعل أيضًا اعتماد المتضررين على المكتب وحشيًا، لأن الشفافية بالنسبة لهم تضيع أيضًا.</li>
+			<li>تمثل بطاقة الدفع تدخلاً في الحقوق الشخصية. يتم مضايقة اللاجئين بها. قد لا يتمكنون من الشراء في المتاجر التي يفضلونها، لأن تكلفة تركيب جهاز القراءة للبطاقات في المتاجر الصغيرة قد تكون باهظة. للحصول على التحويلات والأوامر الدائمة، يحتاج الأمر إلى موافقة مكتب الشؤون الاجتماعية. إذا كانت هناك احتياجات خاصة، يجب تقديم طلب. مبلغ 50 يورو نقدًا هو مبلغ يعتمد على تقدير المكتب. التخصيص نفسه لبطاقة الدفع يعتمد على التقدير. وهذا لن يثقل كاهل الإدارة فقط، بل يزيد من اعتماد المتضررين على المكتب إلى حد مرعب، أيضًا لأنه تفقد الشفافية بالنسبة لهم.</li>
 
-			<li>الهدف من تقديم بطاقة الدفع لن يتحقق رغم ذلك. يُظهر التقرير الأسبوعي DIW 49/2024 أن التحويلات المالية إلى الخارج تأتي فقط بنسبة ضئيلة جدًا من لاجئين، وبالتأكيد ليس الأقل منهم الذين يتلقون خدمات بموجب قانون AsylbLG، لأن هذه الخدمات (بحد أقصى 441€) أدنى من بدل المواطن ولا تلبي بالتأكيد المتطلبات التي وضعها حكم المحكمة الدستورية التابع لعام 2012، بأن الحد الأدنى للوجود لا يمكن تقييده سياسياً من خلال الهجرة. كما تمثل الأسباب الدافعة للهجرة بشكل طبيعي أهمية أكبر من مسألة الخدمة.</li>
+			<li>لن يتحقق هدف إدخال بطاقة الدفع على أي حال. يُظهر التقرير الأسبوعي رقم 49/2024 لـ DIW أن التحويلات الخارجية نادرًا ما تأتي من اللاجئين، وبالتأكيد أقل من أولئك الذين يتلقون مزايا قانون طالبي اللجوء، لأن هذه المزايا (بحد أقصى 441€) أقل من بدل المواطن وليسوا كافيين بالتأكيد لتلبية المتطلبات التي وضعها حكم المحكمة الدستورية الفيدرالية في عام 2012، والذي يقضي بأن الحد الأدنى للوجود الكريم لا يمكن أن يُقلل بسبب السياسات المتعلقة بالهجرة. وأيضًا بالتأكيد، تفوق أسباب الهجرة السؤال عن المزايا.</li>
 
-			<li>إدخال بطاقة الدفع التقييدية هو جزء من هجوم كبير على حقوق الأشخاص الذين يبحثون عن الحماية. يترافق تقليص الحقوق الاجتماعية للاجئين مع بناء قلعة أوروبا وجهود التخلص تدريجياً من المسؤولية عن حماية اللاجئين (الإعلان العالمي لحقوق الإنسان 1948، المادة 14) وواجباتهم، لاسيما في شكل اتفاقية جنيف للاجئين. لقد تمكن اليمين المتطرف من تطوير خطاب حاسم يعتبر الأشخاص الباحثين عن الحماية كتهديد فقط. تلتقط الأحزاب الديمقراطية السابقة بأعداد متزايدة هذا الخطاب العنصري منذ سنوات. من خلال ذلك، يدفعون عمليًا عمليات التخلص من التضامن ويحولون الخطاب المجتمعي نحو اليمين. بطاقة الدفع ليست سوى سياسة رمزية شعبوية تخدم العنصرية وتعزل الأشخاص الباحثين عن الحماية وتهمشهم وتسيطر عليهم. التكامل يبدو مختلفًا تمامًا!</li>
+			<li>إن إدخال بطاقة الدفع التقييدية هو جزء من هجوم كبير على حقوق الأشخاص الباحثين عن الحماية. يتزامن التناقص في الحقوق الاجتماعية للاجئين مع تعزيز القلعة الأوروبية وجهود التخلص تدريجيًا من مسؤولية حماية اللاجئين (الإعلان العالمي لحقوق الإنسان لعام 1948، المادة 14) والالتزامات، وأخيرًا وليس آخرًا في شكل اتفاقية جنيف للاجئين. تمكنت اليمين المتطرف من تطوير خطاب معمق، يعتبر الباحثين عن الحماية تهديدًا فقط. للأسف، تكرر الأحزاب الديمقراطية هذا الخطاب العنصري منذ سنوات، مما يدفع بعمليات فقدان التضامن قدمًا ويحول النقاش الاجتماعي نحو اليمين. إن بطاقة الدفع ليست سوى سياسة رمزية شعبوية، تستغل العنصرية وتزيد من استبعاد الباحثين عن الحماية، وتضيف إلى تمييزهم ومراقبتهم. التكامل يبدو مختلفًا!</li>
 
-			<li>تقديم بطاقة الدفع ليس بلا بديل. قامت ولاية NRW بإدخال نظام اختياري يسمح للبلديات بعدم تقديم بطاقة الدفع. وقد استفادت بالفعل العديد من المدن الكبيرة من هذا الخيار. ولكن أيضًا في ساكسونيا السفلى، يتزايد الاحتجاج: على الرغم من أنه لا يوجد هناك نظام اختياري، إلا أن مدينة هانوفر أعلنت أنها لن تقدم بطاقة الدفع وتقدم مقاومة مفتوحة بثقة. أعلن المجلس البلدي بأغلبية تشمل فصائل CDU وSPD والخضر بأنهم لن يقدموا البطاقة لأنها تمييزية.</li>
+			<li>ليس إدخال بطاقة الدفع بدون بدائل. لقد أدخلت NRW قاعدة اختيار عدم الاشتراك، التي تسمح للبلديات بعدم إدخال بطاقة الدفع. لقد استفادت العديد من المدن الكبرى بالفعل من ذلك. ولكن حتى في ساكسونيا السفلى، يتزايد الاحتجاج: على الرغم من عدم وجود قاعدة اختيار عدم الاشتراك هناك، أعلن مدينة هانوفر عن عدم إدخال بطاقة الدفع، مما يقدم مقاومة مفتوحة بثقة. لقد أعلن المجلس البلدي بأغلبية ومع الأحزاب من CDU وSPD والخضر رفضهم لإدخال البطاقة لأنها تمييزية.</li>
 
 			</ol>
 
-			<p>نحن نطالب الفصائل في مجلس مدينة هايدلبرغ والإدارة برفض بطاقة الدفع التمييزية وغير المجدية أيضًا في هايدلبرغ.</p>
+			<p>نحن ندعو الفصائل في مجلس بلدية هايدلبرغ والإدارة لرفض البطاقة التمييزية وغير المجدية أيضًا في هايدلبرغ.</p>
 
 			<p>الموقعون الأوائل</p>
 
@@ -168,23 +184,23 @@
 		<div id="contact" class="content">
 			<h1>الاتصال والتبرعات</h1>
 
-			<p>نحن هيكل مفتوح ونجتمع بانتظام لتنسيق الخطوات التالية. هل لديك اهتمام بأن تكون نشطًا ضد بطاقة الدفع؟ إذن انضم إلى أحد اجتماعاتنا القادمة أو اتصل بنا.</p>
+			<p>نحن هيكل مفتوح ونجتمع بانتظام لتنسيق الخطوات اللاحقة. هل ترغب في أن تصبح نشطًا ضد بطاقة الدفع؟ ثم تعال إلى أحد اجتماعاتنا القادمة أو تواصل معنا.</p>
 
 			<h2>الاتصال</h2>
 
 			<ul>
 				<li>البريد الإلكتروني:<br/><a translate="no" href="mailto:kontakt@bezahlkarte-stoppen.de">kontakt@bezahlkarte-stoppen.de</a></li>
-				<li>انستغرام:<br/><a translate="no" href="https://www.instagram.com/bezahlkartestoppen">@bezahlkartestoppen</a></li>
-				<li translate="no">تليجرام:<br/><a translate="no" href="https://t.me/bezahlkarte_stoppen">bezahlkarte_stoppen</a></li>
+				<li>إنستغرام:<br/><a translate="no" href="https://www.instagram.com/bezahlkartestoppen">@bezahlkartestoppen</a></li>
+				<li translate="no">Telegram:<br/><a translate="no" href="https://t.me/bezahlkarte_stoppen">bezahlkarte_stoppen</a></li>
 			</ul>
 
-			<h2>التبرعات</h2>
+			<h2>تبرع</h2>
 
 			<pre translate="no">Röm.-Kath.
 Kirchengemeinde Heidelberg
 DE77 6725 0020 0001 2061 76
 Zweck: Gutschein 2813</pre>
-			الغرض مطلوب، وإلا لن يمكن تخصيص التبرع!
+			الغرض من التبرع مهم، وإلا فلن يتم تخصيص التبرع بشكل صحيح!
 		</div>
 
 	</body>
