--- a/www/tr/index.html
+++ b/www/tr/index.html
@@ -28,11 +28,25 @@
 			</div>
 		</div>
 
+
 		<div class="content">
-			<h1>Freiburg mu?</h1>
-			<p>Maalesef kartpostalımızda yanlış web sitesini vermişiz. Lütfen buraya tıklayınız:</p>
-			<div style="text-align:center;display:block;"><a href="https://bezahlkarte-stoppen.org">https://bezahlkarte-stoppen.org</a></div>
-		</h1></div>
+			<h1>Kuponların değiştirilmesi için talimatlar</h1>
+			<p>Ödeme kartınız var ve ayda sadece 50 € nakit mi alıyorsunuz? Daha fazla nakde ihtiyacınız varsa, takas edelim!</p>
+
+			<img id="cash_card" style="height:8em;" src="../static/img/cash_card.svg" />
+
+			<ol>
+				<li><span translate="no">Aldi</span>, <span translate="no">Lidl</span>, <span translate="no">Edeka</span>, <span translate="no">Kaufland</span>, <span translate="no">Penny</span>, <span translate="no">Rewe</span> veya <span translate="no">DM</span> mağazalarından <strong>50€</strong> karşılığında<strong>bir kupon satın alın</strong> </li>
+				<li><strong>Kuponu bir değişim merkezine götürün!</strong><br>Burada kuponlar karşılığında nakit para alacaksınız.</li>
+			</ol>
+
+			<h2>Nerede?</h2>
+			<p translate="no">Bürgerbüro Die Linke<br />Theodor-Körner-Str. 7<br />69115 Heidelberg</p>
+
+			<p>Toplu taşıma araçlarıyla en iyi <span translate="no">Betriebshof</span> ve <span translate="no">Hauptbahnhof</span></p>
+			<h2>Ne zaman?</h2>
+			<p>Her ayın 2. Salı günü ve 3. Cuma günü.</p>
+		</div>
 
 		<div class="content">
 			<h1>Ödeme kartını durdurun!</h1>
@@ -43,9 +57,9 @@
 
 			<h2>Ödeme kartını neden reddediyoruz?</h2>
 
-			<p>Ödeme kartı, mültecilerin özerkliğine bir tecavüz teşkil etmekte ve günlük yaşama katılımlarını kısıtlamaktadır. Rhine-Neckar bölgesinde 50 Avro'luk bir nakit limiti olacak. Heidelberg'de de benzer bir kısıtlama olması bekleniyor. Banka havaleleri, çevrimiçi alışverişler ve sözleşmeler mümkün değildir ya da ancak büyük bir çaba ile mümkündür. Hayatın birçok alanında nakit para gerekmektedir: örneğin küçük dükkanlar, haftalık pazarlar, bit pazarları veya kültürel etkinlikler. Tüm bunlar ödeme kartı tarafından kısıtlanmaktadır.</p>
+			<p>Ödeme kartı, mültecilerin özerkliğine bir tecavüz teşkil etmekte ve günlük yaşama katılımlarını kısıtlamaktadır. Rhine-Neckar bölgesinde 50 Avroluk bir nakit limiti olacak. Heidelberg'de de benzer bir kısıtlama olması bekleniyor. Banka havaleleri, çevrimiçi alışverişler ve sözleşmeler mümkün değildir ya da ancak büyük bir çaba ile mümkündür. Hayatın birçok alanında nakit para gerekmektedir: örneğin küçük dükkanlar, haftalık pazarlar, bit pazarları veya kültürel etkinlikler. Tüm bunlar ödeme kartı tarafından kısıtlanmaktadır.</p>
 
-			<p>Ödeme kartı bir banka kartına benzese bile, kart yalnızca belirli mağazalarda çalıştığından uygulama seçenekleri çok daha sınırlıdır. Ve bu durumdan etkilenen kişiler, sınırlı avantajlara rağmen yurtdışındaki ailelerini maddi olarak desteklemek için kenara para koymak isterlerse, bu çok daha zor hale geliyor. Kart, veri koruma açısından da sorunlu. Ödeme kartı, yetkililere kontrol için içgörü ve fırsatlar sunmaktadır.</p>
+			<p>Ödeme kartı bir banka kartına benzese de, kart yalnızca belirli mağazalarda çalıştığından uygulama seçenekleri çok daha sınırlıdır. Ve bu durumdan etkilenen kişiler, sınırlı avantajlara rağmen yurtdışındaki ailelerini maddi olarak desteklemek için kenara para koymak isterlerse, bu çok daha zor hale geliyor. Kart, veri koruma açısından da sorunlu. Ödeme kartı, yetkililere kontrol için içgörü ve fırsatlar sunmaktadır.</p>
 
 
 			<h2>Ne yapacağız?</h2>
@@ -107,13 +121,13 @@
 			<p>Baden-Württemberg'de sığınmacı yardımı alan kişiler için ödeme kartının kademeli olarak uygulamaya konulması karşısında şok olduk ve şaşkınlığa uğradık. Ödeme kartının birçok ayrımcı, kısıtlayıcı ve dışlayıcı yönü nedeniyle Heidelberg'de uygulamaya konulmasına karşıyız.</p>
 
 			<ol>
-			<li>Heidelberg'de koruma arayan kişilerin de herkes gibi bir hesabı vardır. Paralarına erişmek için cari hesap kartlarını kullanabilirler. Henüz bir işte çalışmıyorlarsa, başlangıçta AsylbLG uyarınca yardım alırlar. Gelecekte bunlar, hem nakit harcamaların hem de transferlerin/borçlanmaların kısıtlandığı ödeme kartlarına aktarılacaktır. Amaç: Kişinin kendi ailesine ve insan kaçakçılarına transfer yapmaması, caydırıcılık, "çekme faktörlerinin" azaltılması. Ödeme kartının bu arka planı temel haklarımızı ihlal etmektedir: ayrımcılık yasağı, ailenin korunması, kişisel haklar.</li>
+			<li>Heidelberg'de koruma arayan kişilerin de herkes gibi bir hesabı vardır. Paralarına erişmek için cari hesap kartlarını kullanabilirler. Henüz bir işte çalışmıyorlarsa, başlangıçta AsylbLG uyarınca yardım alırlar. Gelecekte bunlar, hem nakit harcamaların hem de transferlerin/borçlanmaların kısıtlandığı ödeme kartlarına aktarılacaktır. Amaç: kendi ailelerine ve insan kaçakçılarına transfer yapılmaması, caydırıcılık, "çekme faktörlerinin" azaltılması. Ödeme kartının bu arka planı temel haklarımızı ihlal etmektedir: ayrımcılık yasağı, ailenin korunması, kişisel haklar.</li>
 
-			<li>Ödeme kartı kişisel haklara bir tecavüzdür. Ülkelerinden kaçan insanlar böylece kontrol altına alınmaktadır. En sevdikleri dükkanlardan alışveriş yapamayabilirler çünkü küçük dükkanlar için banka kartı okuyucusu kurmak çok pahalıdır. Havaleler ve otomatik ödemeler için sosyal yardım dairesinden izin alınması gerekiyor. Özel ihtiyaçlar söz konusuysa, bir başvuru yapılmalıdır. 50 € nakit, ofisin takdirine bağlı bir miktardır. Ödeme kartının tahsisi takdire tabidir. Bu durum sadece idareye ek bir yük getirmekle kalmayacak, aynı zamanda şeffaflığın ortadan kalkması nedeniyle mağdurları da kuruma aşırı derecede bağımlı hale getirecektir.</li>
+			<li>Ödeme kartı kişisel haklara bir tecavüzdür. Bu, mültecilerin kontrol edildiği anlamına gelmektedir. En sevdikleri dükkanlardan alışveriş yapamayabilirler çünkü küçük dükkanların banka kartı için okuyucu kurması çok pahalıdır. Havaleler ve otomatik ödemeler için sosyal yardım dairesinden izin alınması gerekiyor. Özel ihtiyaçlar söz konusuysa, bir başvuru yapılmalıdır. 50 € nakit, ofisin takdirine bağlı bir miktardır. Ödeme kartının tahsisi takdire tabidir. Bu durum sadece idareye ek bir yük getirmekle kalmayacak, aynı zamanda şeffaflığın ortadan kalkması nedeniyle mağdurları da kuruma aşırı derecede bağımlı hale getirecektir.</li>
 
-			<li>Ödeme kartının uygulamaya konulmasıyla hedeflenen amaca zaten ulaşılamayacaktır. DIW'in 49/2024 sayılı haftalık raporu, mültecilerin çok azının yurtdışına havale gönderdiğini ve en azından AsylbLG kapsamında yardım alanların bu yardımları (en fazla 441 Avro) vatandaşlık ödeneğinden bile daha düşük olduğu ve kesinlikle Federal Anayasa Mahkemesi'nin 2012 yılında aldığı ve asgari geçim düzeyinin göç politikası açısından göreceli olmaması gerektiği yönündeki kararının gerekliliklerini karşılamadığını göstermektedir. Ayrıca, kaçış nedenlerinin yardım meselesinden daha ağır bastığını söylemeye gerek yok.</li>
+			<li>Ödeme kartı uygulamasıyla hedeflenen amaca zaten ulaşılamayacaktır. DIW'in 49/2024 sayılı haftalık raporu, mültecilerin çok azının yurtdışına havale gönderdiğini ve en azından AsylbLG kapsamında yardım alanların bu yardımları (en fazla 441 Avro) vatandaşlık ödeneğinden bile daha düşük olduğu ve kesinlikle Federal Anayasa Mahkemesi'nin 2012 yılında aldığı ve asgari geçim düzeyinin göç politikası açısından göreceli olmaması gerektiği yönündeki kararının gerekliliklerini karşılamadığını göstermektedir. Ayrıca, kaçış nedenlerinin yardım meselesinden daha ağır bastığını söylemeye gerek yok.</li>
 
-			<li>Kısıtlayıcı bir ödeme kartının uygulamaya konulması, koruma arayan insanların haklarına yönelik büyük bir saldırının parçasıdır. Mültecilerin sosyal haklarının ortadan kaldırılması, Avrupa Kalesi'nin genişlemesi ve mültecileri koruma sorumluluklarından (1948 İnsan Hakları Evrensel Beyannamesi, Madde 14) ve Cenevre Mülteci Sözleşmesi başta olmak üzere yükümlülüklerinden kademeli olarak kurtulma çabalarıyla el ele gitmektedir. Aşırı sağ, koruma arayan insanları yalnızca bir tehdit olarak gören baskın bir söylem geliştirmeyi başarmıştır. Ne yazık ki bu ırkçı söylem yıllardır demokratik partiler tarafından da giderek daha fazla benimsenmektedir. Bunu yaparak, desolidarizasyon süreçlerini tetiklemekte ve toplumsal söylemi sağa kaydırmaktadırlar. Ödeme kartı, ırkçılığa hizmet eden ve koruma arayanları daha da marjinalleştiren, onlara karşı ayrımcılık yapan ve onları kontrol eden popülist sembolik politikalardan başka bir şey değildir. Entegrasyon farklı görünüyor!</li>
+			<li>Kısıtlayıcı bir ödeme kartının uygulamaya konulması, koruma arayan insanların haklarına yönelik büyük bir saldırının parçasıdır. Mültecilerin sosyal haklarının ortadan kaldırılması, Avrupa Kalesi'nin genişlemesi ve mültecileri koruma sorumluluklarından (1948 İnsan Hakları Evrensel Beyannamesi, Madde 14) ve Cenevre Mülteci Sözleşmesi başta olmak üzere yükümlülüklerinden kademeli olarak kurtulma çabalarıyla el ele gitmektedir. Aşırı sağ, koruma arayan insanları yalnızca bir tehdit olarak gören baskın bir söylem geliştirmeyi başarmıştır. Ne yazık ki bu ırkçı söylem yıllardır demokratik partiler tarafından da giderek daha fazla benimsenmektedir. Bunu yaparak, desolidarizasyon süreçlerini yönlendiriyor ve toplumsal söylemi sağa kaydırıyorlar. Ödeme kartı, ırkçılığa hizmet eden ve koruma arayanları daha da marjinalleştiren, onlara karşı ayrımcılık yapan ve onları kontrol eden popülist sembolik politikalardan başka bir şey değildir. Entegrasyon farklı görünüyor!</li>
 
 			<li>Ödeme kartı uygulamasının alternatifi bulunmamaktadır. NRW, yerel yönetimlerin ödeme kartını uygulamaya koymamasına izin veren bir devre dışı bırakma kuralı getirmiştir. Birçok büyük şehir şimdiden bundan yararlandı. Ancak Aşağı Saksonya'da da bir direniş söz konusu: orada bir opt-out düzenlemesi olmamasına rağmen Hannover şehri ödeme kartını uygulamaya koymayacağını ilan etti ve böylece kendinden emin bir şekilde açık bir direniş sergiliyor. CDU, SPD ve Yeşiller partilerinin de dahil olduğu belediye meclisinin çoğunluğu, ayrımcı olduğu gerekçesiyle kartı uygulamaya koymayacağını açıkladı.</li>
 
